# HECTRE

./: .gitignore  CDF.csv  Makefile  README.md  USER_GUIDE.md  config.ini  config.yaml  definitions.json  hectre.pu  pyproject.toml  requirements.txt
.github/workflows/: test-hectre.yaml
backend/: README.md  consts.py  main.py  requirements.txt
backend/docker/: Dockerfile
backend/models/: extraction_request.py  foo.py
backend/routers/: files.py  foo.py
backend/schemas/: foo.py
backend/services/: files_service.py  foo.py
backend/tests/: test_aws_conf.py  test_file_service.py
backend/utils/: get_list_of_app_exceptions_for_frontend.py  response_handler.py  service_result.py
docker/: Dockerfile  docker-compose.yaml
hectre/: README.md  api.py  consts.py  definitions.json  extract.py
hectre-be-app/: README.md  main.py  pyproject.toml  requirements.txt
hectre-be-app/models/: foo.py
hectre-be-app/routers/: files.py  foo.py
hectre-be-app/services/: main.py
hectre-be-app/tests/: test_00_using_tests_for_everything.py  test_01_data_schemas.py
hectre-ui-app/: angular.json  package.json
hectre/cdf/: cdf.py
hectre/input_parsers/: consts.py  llm_pypdf2_pdf_parser.py  parser.py  pdf_parser.py  picos_parser.py  (+4 more)
pdf_parsers/: pdfParser_dict_tables.py  pdfParser_dictionary.py  pdfParser_writes_txt.py
src/: README.md  api.py  consts.py  definitions.json  extract.py  local_test.py  local_test_parse_file_path.py  picos.py  pyproject.toml  request_data.py  requirements.txt  unit_tests.py
ui/: README.md  angular.json  package-lock.json  package.json
(+126 files in other folders)
