[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HECTRE"
version = "0.0.1"
requires-python = ">=3.8"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
]
python_functions = "*should*"

[tool.poetry]
name = "hectre-be-app"
version = "0.1.0"
description = ""
authors = ["Manny Kwaning <ema526@g.harvard.edu>"]
readme = "hectre-be-app/README.md"