[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "HECTRE"
version = "0.0.1"
requires-python = ">=3.8"

[tool.pytest.ini_options]
minversion = "7.0"

[tool.poetry]
name = "hectre-be-app"
version = "0.1.0"
description = ""
authors = [
    "Manny Kwaning <ema526@g.harvard.edu>",
    "Carl Zhao <zhz073@g.harvard.edu>",
    "James Nicholson <jnicholson@hsph.harvard.edu>",
    "Kartik Srikumar <kartik.srikumar@gmail.com>",
    "Veronika Post <vep676@g.harvard.edu>"
]
readme = "backend/README.md"